fix: style break on textfillanimation

--- a/apps/web/app/home/_components/about-us/about-us.module.scss
+++ b/apps/web/app/home/_components/about-us/about-us.module.scss
@@ -8,6 +8,8 @@
   font-size: 2rem;
 }
 
-// .wrap {
-//   min-width: 368px;
-// }
+.wrap {
+  @media (max-width: 380) {
+    font-size: 1.8rem;
+  }
+}
